force-app/main/default/objects/Share_Object__c/Share_Object__c.object-meta.xml
<CustomObject>
    <label>共享对象</label>
    <nameField>
        <label>共享对象名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>共享对象</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>