force-app/main/default/objects/Share_Object__c/fields/Account_API__c.field-meta.xml
<CustomField>
    <fullName>Account_API__c</fullName>
    <description>目标对象中的客户SF编码, 类型: 文本/公式文本</description>
    <inlineHelpText>目标对象中的客户SF编码, 类型: 文本/公式文本  (若此表存在产品线纬度,请勿填写此项, 仅供存在门店/客户纬度使用)</inlineHelpText>
    <label>客户字段API名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>