force-app/main/default/objects/Share_Object__c/fields/Account_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Account_Product_Line__c</fullName>
    <inlineHelpText>目标对象中的: 客户SF编码 + 产品线  类型:文本/公式文本</inlineHelpText>
    <label>客户产品线字段API名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>