force-app/main/default/objects/Share_Object__c/fields/Batch_AddMinutes__c.field-meta.xml
<CustomField>
    <fullName>Batch_AddMinutes__c</fullName>
    <label>Batch调用周期(Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>