force-app/main/default/objects/Share_Object__c/fields/Brand_Filed_API__c.field-meta.xml
<CustomField>
    <fullName>Brand_Filed_API__c</fullName>
    <label>品牌字段API名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>