force-app/main/default/objects/Share_Object__c/fields/Data_Import__c.field-meta.xml
<CustomField>
    <fullName>Data_Import__c</fullName>
    <externalId>true</externalId>
    <label>*数据导入</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>