force-app/main/default/objects/Share_Object__c/fields/Gridding_Filed_API__c.field-meta.xml
<CustomField>
    <fullName>Gridding_Filed_API__c</fullName>
    <description>目标对象中的网格编码 类型:文本/公式文本</description>
    <inlineHelpText>目标对象中的网格编码 类型:文本/公式文本</inlineHelpText>
    <label>网格字段API名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>