force-app/main/default/objects/Share_Object__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>是否启用</label>
    <type>Checkbox</type>
</CustomField>