force-app/main/default/objects/Share_Object__c/fields/IsRelyThisShare__c.field-meta.xml
<CustomField>
    <fullName>IsRelyThisShare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否依赖该共享对象</label>
    <type>Checkbox</type>
</CustomField>