force-app/main/default/objects/Share_Object__c/fields/Object_API__c.field-meta.xml
<CustomField>
    <fullName>Object_API__c</fullName>
    <inlineHelpText>要与用户共享的对象API名, 自定义对象需__c后缀</inlineHelpText>
    <label>共享对象API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>