force-app/main/default/objects/Share_Object__c/fields/Object_Share__c.field-meta.xml
<CustomField>
    <fullName>Object_Share__c</fullName>
    <description>填写该对象对应的Share对象名称</description>
    <externalId>true</externalId>
    <inlineHelpText>填写该对象对应的Share对象名称</inlineHelpText>
    <label>共享对象_ShareAPI</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>