force-app/main/default/objects/Share_Object__c/fields/Owner_Filed_API__c.field-meta.xml
<CustomField>
    <fullName>Owner_Filed_API__c</fullName>
    <label>Owner Filed API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>