force-app/main/default/objects/Share_Object__c/fields/Product_Line_API__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_API__c</fullName>
    <description>目标对象中的产品线字段, 选项列表值的Value</description>
    <inlineHelpText>目标对象中的产品线字段, 选项列表值的Value</inlineHelpText>
    <label>产品线字段API名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>