force-app/main/default/objects/Share_Object__c/fields/Query_Statement__c.field-meta.xml
<CustomField>
    <fullName>Query_Statement__c</fullName>
    <label>查询语句</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>