force-app/main/default/objects/Share_Object__c/fields/Refresh_Query_Statement__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Query_Statement__c</fullName>
    <label>岗位刷新查询语句</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>