force-app/main/default/objects/Share_Object__c/fields/Share_Chunk__c.field-meta.xml
<CustomField>
    <fullName>Share_Chunk__c</fullName>
    <label>共享分块</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>