force-app/main/default/objects/Share_Object__c/fields/Share_RowCause__c.field-meta.xml
<CustomField>
    <fullName>Share_RowCause__c</fullName>
    <description>共享原因的API名称</description>
    <inlineHelpText>共享原因的API名称</inlineHelpText>
    <label>共享原因</label>
    <length>255</length>
    <type>Text</type>
</CustomField>