force-app/main/default/objects/Share_Object__c/fields/Share_Type__c.field-meta.xml
<CustomField>
    <fullName>Share_Type__c</fullName>
    <label>共享类型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Share_Type</valueSetName>
    </valueSet>
</CustomField>