force-app/main/default/objects/Share_Object__c/fields/Shop_Filed_API__c.field-meta.xml
<CustomField>
    <fullName>Shop_Filed_API__c</fullName>
    <label>门店字段API名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>