force-app/main/default/objects/Share_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_API__c</columns>
    <columns>Account_Product_Line__c</columns>
    <columns>Account_API__c</columns>
    <columns>Gridding_Filed_API__c</columns>
    <columns>Shop_Filed_API__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
</ListView>